--- a/src/style/DisplayPage.css
+++ b/src/style/DisplayPage.css
@@ -1,21 +1,23 @@
-/* mic green: #00FFBF */
-
-/*
-font-family: 'Palanquin Dark', sans-serif;
-font-family: 'Lato', sans-serif;
-*/
+html {
+  background-color: #000000;
+}
 
 .display-container {
-  /*width: 80%;*/
   max-width: 1200px;
   padding: 20px 30px 30px 30px;
-
   color: #FFFFFF;
-  background-color: #000000;
-
   font-family: 'Lato', sans-serif;
 }
 
-table {
-  border: 1px solid white;
+img, h2 {
+  display: inline-block;
+  margin: 0px;
+}
+
+h2 {
+  position: relative;
+  top: -11px;
+  left: -2px;
+  color: #7F7F7F;
+  font-weight: 400;
 }
