--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -8,3 +8,16 @@ th {
   font-weight: 700;
   font-size: 20px;
 }
+
+i {
+  display: inline-block;
+  padding-left: 10px;
+}
+
+.wordcount {
+  min-width: 105px;
+}
+
+.submitted {
+  min-width: 138px;
+}
