Add ease to button.

--- a/src/style/SingleArticle.css
+++ b/src/style/SingleArticle.css
@@ -23,7 +23,7 @@ td {
   border: 10px solid #000000;
   background-image:
     linear-gradient(
-      #EDEDED,
+      #D8D8D8,
       white 45%
     );
 }
