--- a/src/style/SingleArticle.css
+++ b/src/style/SingleArticle.css
@@ -1,10 +1,12 @@
-table {
-  border-collapse: collapse;
+.body {
+  display: flex;
+  flex-direction: column;
+  color: #000000;
 }
 
-tbody {
-  background: #FFFFFF;
-  color: #000000;
+.article-info {
+  display: flex;
+  align-items: stretch;
 }
 
 p {
@@ -14,13 +16,15 @@ p {
 }
 
 p, h3 {
-  margin: 0px;
   padding: 0px 10px 0px 10px;
 }
 
-td {
-  padding: 0px;
-  border: 10px solid #000000;
+.article-element {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 77px;
+  border: 5px solid #000000;
   background-image:
     linear-gradient(
       #D8D8D8,
@@ -28,7 +32,26 @@ td {
     );
 }
 
-.last td {
+.image {
+  height: auto;
+}
+
+.article-title {
+  width: 30vw;
+  max-width: 500px;
+}
+
+.wordcount {
+  width: 10vw;
+  max-width: 100px;
+}
+
+.author, .submitted {
+  width: 15vw;
+  max-width: 200px;
+}
+
+.last .article-element {
   animation-duration: 3s;
   animation-name: fadeIn;
 }
@@ -44,14 +67,11 @@ td {
 }
 
 .crop-img {
-  display: inline-block;
   margin: 5px;
   border: 2px solid #000000;
   height: 60px;
   width: 60px;
   overflow: hidden;
-  position: relative;
-  top: 2px;
 }
 
 img {
