--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -1,5 +1,106 @@
-@media only screen and (max-width: 940px) {
-  .article-title {
-    flex-grow: 3;
+@media only screen and (max-width: 860px) {
+  .header .author {
+    display: none;
+  }
+
+  .article-info {
+    margin: 0 auto;
+    display: inline-block;
+    text-align: center;
+  }
+
+  .body .article-info {
+    background: #ffffff;
+    border: 10px solid #000000;
+    max-width: 360px;
+  }
+
+  .header {
+    display: flex;
+  }
+
+  .header-element {
+    display: inline-block;
+    max-width: 320px;
+    width: 100%;
+    padding: 10px;
+    font-weight: 800;
+    font-size: 18px;
+    background-color: #00FFBF;
+    color: #000000;
+    border: 15px solid black;
+  }
+
+  .article-info .article-title {
+    display: block;
+    margin: 0 auto;
+    margin-left: -25px;
+  }
+
+  p {
+    font-size: smaller;
+    display: block;
+  }
+
+  i, span {
+    display: block;
+  }
+
+  .break {
+    display: block;
+  }
+
+  .break p {
+    display: inline-block;
+    font-weight: 800;
+  }
+
+  .article-element {
+    display: inline-block;
+    border: none;
+    background-image: none;
+  }
+
+  .crop-img {
+    margin: 5px;
+    border: 2px solid #000000;
+    height: 200px;
+    width: 200px;
+    overflow: hidden;
+    border: none;
+    margin: 0 auto;
+  }
+
+  .crop-img img {
+    display: inline-block;
+    height: 200px;
+  }
+
+  .image {
+    width: 100%;
+    height: 100%;
+    background: #D8D8D8;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 5px;
+  }
+
+  .body .article-title {
+    width: auto;
+    min-height: auto;
+    padding: 5px 20px 5px 20px;
+    background-image:
+      linear-gradient(
+        #D8D8D8,
+        white 95%
+      );
+    display: block;
+    margin: 0 auto;
+  }
+
+  .author, .wordcount, .submitted {
+    margin-top: -10px;
+    width: auto;
+    min-height: auto;
   }
 }
